theme_kommit - correct the z-index for the nav bar.
Related to-do: TRH: Wrong Z-index in the Add users dialog
https://3.basecamp.com/3304540/buckets/1233600/todos/240442624

--- a/theme/kommit/less/theme/navbar.less
+++ b/theme/kommit/less/theme/navbar.less
@@ -1,8 +1,10 @@
 @import "inc/variables.less";
 @import "inc/mixins.less";
 
-.navbar-fixed-top, .navbar-fixed-bottom {
+.navbar-fixed-top,
+.navbar-fixed-bottom {
     position: relative;
+    z-index: 0;
 }
 
 /* @group Navbar */
