--- a/theme/kommit/style/theme.css
+++ b/theme/kommit/style/theme.css
@@ -278,6 +278,7 @@ h6 {
 .navbar-fixed-top,
 .navbar-fixed-bottom {
   position: relative;
+  z-index: 0;
 }
 /* @group Navbar */
 .navbar .nav > li > a:hover,
